# AIContentDetector

./: .gitignore  render.yaml  requirements.txt
.claude/: CLAUDE.md  settings.json
PoC_knowlege_01/: knowlege_01.md
project/.next/server/: server-reference-manifest.js  server-reference-manifest.json
project/AiContentDetector/: .env.example  .gitignore  spec.md
project/AiContentDetector/backend/: render.yaml  requirements.txt
project/AiContentDetector/components_backup/: AdviceSection.tsx  RadarChart.tsx
project/PropoSuporter/: pyproject.toml  spec.md
project/PropoSuporter/src/propo_suporter/: format_checker.py  main.py  openai_adapter.py  proposal_generator.py  requirement_organizer.py  web.py
project/PropoSuporter/src/propo_suporter/static/: index.html
project/PropoSuporter/tests/: test_format_checker.py  test_main.py  test_openai_adapter.py  test_proposal_generator.py  test_requirement_organizer.py  test_web.py
project/SlackToConfl/: .env.example  requirements.txt  spec.md
project_test01/: jest.setup.js  package-lock.json  package.json  test.md
project_test01/app/: globals.css  layout.tsx  page.tsx
project_test01/components/: DatePicker.tsx  DeleteConfirmModal.tsx  DueDateBadge.tsx  EmptyState.tsx  PriorityBadge.tsx  PrioritySelector.tsx  ThemeToggle.tsx  TodoApp.tsx  TodoFilters.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  TodoText.tsx
project_test01/hooks/: useLocalStorage.ts  useTodos.test.ts  useTodos.ts
project_test01/lib/: constants.ts  dateHelpers.ts  migration.ts
project_test01/types/: todo.ts
(+52 files in other folders)
